# lc-binutils

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  binutils-config.toml  clippy.toml  config.toml  install_binutils_symlinks.cmake
.github/workflows/: clippy.yml  rust.yml  rustfmt.yml
ar/: Cargo.toml  config.toml
arch-ops/: Cargo.toml  Makefile.in  build.rs
arch-ops/generator/: generic.td  wc65c816.td  wc65c816.td.json  xlang.td
arch-ops/src/: clever.rs  disasm.rs  holeybytes.rs  lib.rs  test.rs  traits.rs  w65.rs  wc65c816.rs  x86.rs
arch-ops/src/generators/: instructions.rs  mod.rs  register.rs
arch-ops/src/holeybytes/: codec.rs  hbbytecode.rs  instructions.in  mod.rs
arch-ops/src/tablegen/: register.rs
arch-ops/src/wc65c816/: flags.rs  instructions.rs  registers.rs
arch-ops/src/x86/: codegen.rs  cpu.rs  features.rs  insn.rs  printer.rs
arch-ops/src/x86/codegen/: insn.rs
binfmt/: Cargo.toml  ar.rs  debug.rs  elf.rs  fmt.rs  lib.rs  traits.rs  xir.rs
binfmt-test/: Cargo.toml
binfmt-test/src/: main.rs
binfmt/ar/tests/: mod.rs
binfmt/src/: ar.rs  binary.rs  coff.rs  debug.rs  elf.rs  elf32.rs  elf64.rs  fmt.rs  howto.rs  lib.rs  macho.rs  o65.rs  pe.rs  sym.rs  traits.rs  xir.rs
binfmt/src/ar/tests/: mod.rs
binfmt/src/elf/tests/: empty_exec  mod.rs
binfmt/src/elf32/: w65.rs  x86_64.rs
binfmt/src/elf64/: clever.rs  holeybytes.rs  x86_64.rs
dbg-info/: Cargo.toml
dbg-info/src/: lib.rs
lc-as/: Cargo.toml  build.rs
lc-as/src/: as_state.rs  expr.rs  lcas.rs  lex.rs  lib.rs  targ.rs
lc-as/src/targ/: clever.rs
lcas/: Cargo.toml  config.toml
lcas/src/: as_state.rs  expr.rs  lcas.rs  lex.rs  lib.rs  span.rs  sym.rs  targ.rs
lcas/src/targ/: clever.rs  holeybytes.rs  w65.rs
lccc-mangle/: Cargo.toml
lccc-mangle/src/: itanium.rs
lcld/: Cargo.toml  config.toml
lcld/src/: input.rs  link.rs  lto.rs  main.rs  output.rs  script.rs  targ.rs
lcld/src/arch/: mod.rs
lcld/src/driver/: mod.rs
lcld/src/driver/ld/: mod.rs
lcld/src/driver/ld64/: mod.rs
lcld/src/driver/link/: mod.rs
lcld/src/driver/wasm/: mod.rs
lto/: Cargo.toml
objdump/: Cargo.toml
objdump/src/: main.rs
readobj/: Cargo.toml
src/: main.rs
src/arch/: mod.rs
src/binfmt/: aout.rs  elf.rs  traits.rs
src/driver/: mod.rs
src/driver/ld/: mod.rs
src/driver/link/: mod.rs
tablegen/: Cargo.toml
tablegen/src/: lib.rs
