[package]
name = "lcar"
version = "0.1.0"
authors = ["Connor Horman <chorman64@gmail.com>"]
edition = "2021"
rust-version = "1.74"
license = "BSD-2-Clause-Patent"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
binfmt = {path = "../binfmt",features=["ar"]}

[features]
elf = ["binfmt/elf"]
elf32 = ["binfmt/elf32","elf"]
elf64 = ["binfmt/elf64","elf"]
coff = ["binfmt/coff"]
aout = ["binfmt/aout"]
o65 = ["binfmt/o65"]
xo65 = ["binfmt/xo65"]
default-formats = ["elf32", "elf64", "coff",  "o65", "xo65"]
all-formats = ["aout","default-formats"]
all = ["all-formats"]
default = ["default-formats"]