[package]
name = "arch-ops"
version = "0.1.0"
authors = ["chorm", "rdrpenguin"]
edition = "2018"
rust-version = "1.56"
license = "BSD-2-Clause-Patent"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1"
target-tuples = "0.5.2"

[features]
x86 = []
arm = []
aarch64 = []
w65 = []
riscv = []
propeller = []
propeller2 = []
m6502 = []
clever = []
default-archs = ["x86","arm","aarch64","w65","riscv","propeller","propeller2", "m6502", "clever"]
default = ["default-archs"]
all-archs = ["default-archs"]
all = ["all-archs"]
