[package]
name = "arch-ops"
version = "0.1.0"
authors = ["Connor Horman <chorman@lcdev.xyz>", "rdrpenguin"]
description = "A library to encode and decode instructions for several architectures"
edition = "2018"
rust-version = "1.56"
license = "BSD-2-Clause-Patent"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
delegate = "0.10"
lazy_static = "1"
target-tuples = "0.5.5"
paste = "1"
with_builtin_macros = { version = "0.0.3", optional = true }

[features]
x86 = []
arm = []
aarch64 = []
w65 = ["m6502"]
riscv = []
propeller = []
propeller2 = []
m6502 = []
clever = []
m68k = []
z80 = []
holey-bytes = ["with_builtin_macros"]

default-archs = ["x86","arm","aarch64","w65","riscv","propeller","propeller2", "m6502", "clever", "m68k", "holey-bytes"]
default = ["default-archs"]
all-archs = ["default-archs"]
all = ["all-archs","z80"]
