[package]
name = "binfmt"
version = "0.1.0"
authors = ["Connor Horman <chorman64@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
static_assertions = "1.1.0"
bytemuck = {version="1.5.1",features=["derive"]}
lazy_static = "1.4.0"
target-tuples = "0.4.0"

[lib]
name = "binfmt"

[features]
aout = []
coff = []
elf32 = ["elf"]
elf64 = ["elf"]
elf = []
macho = []
pe = ["coff"]
llir = []
xir = []
ar = []
xo65 = []
o65 = []
default-formats = ["coff","elf32","elf64","macho","pe","llir","xir","ar"]
all-formats = ["default-formats","aout","xo65","o65"]
w65 = []
x86 = []
arm = []
aarch64 = []
riscv = []
m68k = []
clever = []
z80 = []
m6502 = []
default-archs = ["w65", "x86", "arm","riscv","m68k"]
all-archs = ["default-archs", "z80", "m6502", "clever"]