[package]
name = "binfmt"
version = "0.1.0"
authors = ["Connor Horman <chorman64@gmail.com>", "Ray Redondo <rdrpenguin04@gmail.com>"]
description = "A library for reading and writing binaries"
edition = "2021"
rust-version = "1.74"
license = "BSD-2-Clause-Patent"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
static_assertions = "1.1.0"
bytemuck = {version="1.13.1",features=["derive"]}
lazy_static = "1.4.0"
target-tuples = "0.5.9"
fake-enum = "0.1.4"
arch-ops = {path="../arch-ops", version = "0.1.0"}
bitflags = {version="2.5.0", features=["bytemuck"]}

[lib]
name = "binfmt"

[features]
aout = []
coff = []
elf32 = ["elf"]
elf64 = ["elf"]
elf = []
macho = []
pe = ["coff"]
llir = []
xir = []
ar = []
xo65 = []
o65 = []
default-formats = ["coff","elf32","elf64","macho","pe","ar"]
lto-formats = ["llir","xir"]
all-formats = ["default-formats", "lto-formats","aout","xo65","o65"]
w65 = []
x86 = []
arm = []
aarch64 = []
riscv = []
m68k = []
clever = []
z80 = []
m6502 = []
holey-bytes = []
default-archs = ["w65", "x86", "arm","riscv","m68k", "clever", "holey-bytes"]
all-archs = ["default-archs", "z80", "m6502"]
