[package]
name = "lcas-core"
version = "0.1.0"
authors = ["Connor <chorman64@gmail.com>"]
edition = "2018"
license = "BSD-2-Clause-Patent"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
x86 = ["arch-ops/x86","binfmt/x86"]
arm = ["arch-ops/arm","binfmt/arm"]
aarch64 = ["arch-ops/aarch64","binfmt/aarch64"]
clever =["arch-ops/clever","binfmt/clever"]
w65 = ["arch-ops/w65","binfmt/w65"]
riscv = []
propeller = []
propeller2 = []
holey-bytes = ["arch-ops/holey-bytes", "binfmt/holey-bytes"]
aout = ["binfmt/aout"]
coff = ["binfmt/coff"]
elf32 = ["binfmt/elf32","elf"]
elf64 = ["binfmt/elf64","elf"]
elf = ["elf32","elf64"]
macho = ["binfmt/macho"]
default-formats = ["coff","elf","macho"]
all-formats = ["default-formats","aout"]
default-archs = ["x86","arm","aarch64","clever","w65","riscv","propeller","propeller2", "holey-bytes"]
default = ["default-archs","default-formats"]
all-archs = ["default-archs"]
all = ["all-archs","all-formats"]



[dependencies]
binfmt = {path = "../binfmt"}
arch-ops = {path = "../arch-ops"}
target-tuples = "0.5"
utf = "0.1.6"

[build-dependencies]
serde = {version="1",features=["derive"]}
toml = "0.5"
target-tuples = "0.5"

[[bin]]
name = "lcas"
path = "src/lcas.rs"
