[package]
name = "lcld"
version = "0.1.0"
authors = ["Connor Horman <chorman64@gmail.com>", "Ray Redondo <rdrpenguin04@gmail.com>"]
edition = "2018"
license = "BSD+Patent"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
x86 = []
w65c816 = []
default-archs = ["x86","w65c816"]
all-archs = ["default-archs"]
elf = ["binfmt/elf"]
coff = ["binfmt/coff"]
pe = ["binfmt/pe"]
macho = ["binfmt/macho"]
aout = ["binfmt/aout"]
llir = ["binfmt/llir"]
xir = ["binfmt/xir"]
default-formats = ["elf","coff","pe","macho"]
lto-formats = ["xir","llir"]
all-formats = ["default-formats","aout","lto-formats"]
default = ["default-archs","default-formats"]
all = ["all-archs","all-formats","sosigning"]
sosigning = []
lto = ["lto-formats"]

[dependencies]
target-tuples = "0.4.1"
binfmt = {path = "../binfmt"}

[package.metadata.install-targets.lcld]
aliases = ["ld.lc","lc-link","ld64.lc"]
