[package]
name = "lcld"
version = "0.1.0"
authors = ["Connor Horman <chorman64@gmail.com>", "Ray Redondo <rdrpenguin04@gmail.com>"]
edition = "2018"
license = "BSD-2-Clause-Patent"
build = "build/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
w65 = ["binfmt/w65","arch-ops/w65"]
x86 = ["binfmt/x86","arch-ops/x86"]
arm = ["binfmt/arm","arch-ops/arm"]
aarch64 = ["binfmt/aarch64","arch-ops/aarch64"]
riscv = ["binfmt/riscv","arch-ops/riscv"]
m68k = ["binfmt/aarch64","arch-ops/aarch64"]
clever = ["binfmt/clever","arch-ops/clever"]
z80 = ["binfmt/z80","arch-ops/z80"]
m6502 = ["binfmt/m6502","arch-ops/m6502"]
default-archs = ["w65", "x86", "arm","riscv","m68k", "clever"]
all-archs = ["default-archs", "z80", "m6502"]
elf = ["binfmt/elf"]
elf32 = ["binfmt/elf32"]
elf64 = ["binfmt/elf64"]
coff = ["binfmt/coff"]
pe = ["binfmt/pe"]
macho = ["binfmt/macho"]
aout = ["binfmt/aout"]
o65 = ["binfmt/o65"]
xo65 = ["binfmt/xo65"]
llir = ["binfmt/llir"]
xir = ["binfmt/xir"]
default-formats = ["elf","coff","pe","macho"]
lto-formats = ["xir","llir"]
all-formats = ["default-formats","aout","o65", "xo65","lto-formats"]
default = ["default-archs","default-formats"]
all = ["all-archs","all-formats","sosigning"]
sosigning = []
lto = ["lto-formats"]

[dependencies]
target-tuples = "0.5.10"
binfmt = {path = "../binfmt", features = ["ar"]}
arch-ops = {path = "../arch-ops"}

[build-dependencies]
target-tuples = "0.5.10"
serde = {version="1.0.147",features=["derive"]}
toml = "0.5"
unix_path={version="1.0.1",features=["serde"]}

[package.metadata.install-targets.lcld]
aliases = ["ld.lc","lc-link","ld64.lc"]
