[package]
name = "tablegen"
version = "0.1.0"
authors = ["Connor <chorman64@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.62"
serde = {version="1.0.123",features=["derive"]}
syn = {version="1.0.60",features=["full"]}
quote = "1.0.8"
proc-macro2 = "1.0.24"
case = "1.0.0"
which = "4.0.2"

[lib]
proc-macro=true